--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
   - Generate function flow diagrams
   - What to call num_year_to_estimate?
   - More rigorous stress testing!
+  - Have prevalence return formula and raw_data, so that counted_prevalence doesn't need to hardcode the column names!
