--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
-  - Redo prev_chisq to apply to prevalence object
   - More rigorous stress testing!
+  - prev_chisq called from prevalence object and displayed in summary
+  - Turn boot_eg into survfit -> plot methods
+  - Improve functional_form_age in some description
+  - Rename some functions in diagnostics
