Made survfit.prev.R file and renamed diagnostics_plots.R to cumulative_incidence.R

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
   - More rigorous stress testing!
+  - Clean up cumulative_incidence
   - print method for cincidence
-  - Get unit tests working
+  - Should docstring examples include library(prevR)?
